tests/fixtures/invalid/missing_then_lines.sr
rule "EQ: Missing Then" in underlying:
    when true:

